# rprpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  todo.txt
apps/: CMakeLists.txt
apps/assets/: post_processing.comp
apps/common/: CMakeLists.txt  HybridProRenderer.cpp  HybridProRenderer.h  HybridProRenderer.hpp  RprPostProcessing.cpp  RprPostProcessing.h  RprPostProcessing.hpp  StagingBuffer.cpp  StagingBuffer.h  WRprPpBuffer.cpp  WRprPpBuffer.h  WRprPpContext.cpp  WRprPpContext.h  WRprPpHostVisibleBuffer.cpp  WRprPpHostVisibleBuffer.h  WRprPpImage.cpp  WRprPpImage.h  WRprPpPostProcessing.cpp  WRprPpPostProcessing.h  rpr_helper.cpp  rpr_helper.h
apps/common/rprpp_wrappers/: Buffer.cpp  Buffer.h  Context.cpp  Context.h  Image.cpp  Image.h  PostProcessing.cpp  PostProcessing.h  helper.cpp  helper.h
apps/common/rprpp_wrappers/filters/: BloomFilter.cpp  BloomFilter.h  ComposeColorShadowReflectionFilter.cpp  ComposeColorShadowReflectionFilter.h  ComposeOpacityShadowFilter.cpp  ComposeOpacityShadowFilter.h  DenoiserFilter.cpp  DenoiserFilter.h  Filter.cpp  Filter.h  ToneMapFilter.cpp  ToneMapFilter.h
apps/consoleapp/: CMakeLists.txt  main.cpp
apps/glfwapp/: CMakeLists.txt  Dx11App.cpp  Dx11App.h  Dx11App.hpp  HybridProRenderer.cpp  HybridProRenderer.hpp  NoAovsInteropApp.cpp  NoAovsInteropApp.h  WithAovsInteropApp.cpp  WithAovsInteropApp.h  common.hpp  dx_helper.cpp  dx_helper.h  main.cpp  rpr_helper.hpp
apps/glfwapp/assets/: post_processing.comp
apps/oidnapp/: CMakeLists.txt  WithAovsInteropApp.cpp  dx_helper.h  main.cpp
capi/: CMakeLists.txt  rprpp.cpp  rprpp.h  version.rc.in
cmake/: CopyFileToTarget.cmake  FindRadeonProRenderSDK.cmake  FindStb.cmake  VulkanTools.cmake  WindowsFileVersion.cmake
libs/RadeonProRender/inc/: RadeonProRender.h  RadeonProRender_v2.h
rprpp/: Buffer.cpp  Buffer.h  CMakeLists.txt  Context.cpp  Context.h  ContextObject.cpp  ContextObject.h  ContextObjectContainer.cpp  ContextObjectContainer.h  ContextObjectContainerEqual.h  ContextObjectContainerHasher.h  ContextObjectHash.h  DescriptorBuilder.cpp  DescriptorBuilder.h  Dx11SharedTexture.cpp  DxImage.cpp  DxImage.h  Error.cpp  HostVisibleBuffer.cpp  HostVisibleBuffer.h  Image.cpp  Image.h  ImageData.cpp  ImageData.h  ImageDescription.cpp  ImageDescription.h  ImageFormat.h  ImageSimple.cpp  ImageSimple.h  PostProcessing.cpp  PostProcessing.h  ShaderManager.cpp  ShaderManager.h  StagingBuffer.cpp  StagingBuffer.h  UniformObjectBuffer.h  VkSampledImage.cpp  VkSampledImage.h  common.h  oidn_helper.cpp  (+8 more)
rprpp/filters/: BloomFilter.cpp  BloomFilter.h  ComposeColorShadowReflectionFilter.cpp  ComposeColorShadowReflectionFilter.h  ComposeOpacityShadowFilter.cpp  ComposeOpacityShadowFilter.h  DenoiserCpuFilter.cpp  DenoiserCpuFilter.h  DenoiserFilter.cpp  DenoiserFilter.h  DenoiserGpuFilter.cpp  DenoiserGpuFilter.h  Filter.cpp  Filter.h  ToneMapFilter.cpp  ToneMapFilter.h
rprpp/shaders/: bloom_convolve1d.comp  bloom_convolve2d.comp  bloom_horizontal.comp  bloom_vertical.comp  blooom_threshold.comp  compose_color_shadow_reflection.comp  compose_opacity_shadow.comp  post_processing.comp  tonemap.comp
rprpp/vk/: CommandBuffer.cpp  CommandBuffer.h  DescriptorBuilder.cpp  DescriptorBuilder.h  DeviceContext.cpp  DeviceContext.h  ShaderManager.cpp  ShaderManager.h  vk_helper.cpp  vk_helper.h
scripts/: build.sh  build_and_run.sh  configure.sh  run.sh
src/: CMakeLists.txt  DescriptorBuilder.cpp  DescriptorBuilder.h  DescriptorBuilder.hpp  Dx11App.cpp  Error.cpp  Error.h  HybridProRenderer.cpp  HybridProRenderer.hpp  ImageFormat.h  ImageFormat.hpp  PostProcessing.cpp  PostProcessing.h  PostProcessing.hpp  ShaderManager.cpp  ShaderManager.h  ShaderManager.hpp  common.hpp  dx11app.hpp  main.cpp  rpr_helper.hpp  vk.h  vk.hpp  vk_helper.cpp  vk_helper.h  vk_helper.hpp  vkcompute.hpp
src/assets/: post_processing copy.comp  post_processing.comp
src/capi/: CMakeLists.txt  rprpp.cpp  rprpp.h
src/shaders/: post_processing.comp
stbimpl/: CMakeLists.txt  stbimpl.cpp
vkdx11_interop/: CMakeLists.txt  rprpp.h  version.rc.in  version_info.h.in  vkdx11_interop.cpp
